Fix spacing of project slide navigation

--- a/css/style.scss
+++ b/css/style.scss
@@ -50,6 +50,10 @@ section {
   align-items: center;
 }
 
+.section {
+  overflow: hidden;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -199,17 +203,39 @@ h3 {
 
 .fp-slidesNav {
   text-align: center;
+  bottom: -10px !important;
 
   ul {
+    margin-left: -150px;
+
     li {
-      width: 50px;
-      height: 50px;
-      margin: 15px;
+      margin: 15px 15px -20px;
+      width: 70px;
+      height: 60px;
       transform: rotate(-40deg);
 
-      a span {
-        all: unset;
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: lightgrey;
+        width: 220px;
+        height: 2.5em;
+        padding-left: 50px;
+        text-align: center;
+
+        span {
+          all: unset;
+          margin: 0 !important;
+          height: auto !important;
+          width: auto !important;
+        }
       }
+
+      // &:focus,
+      // &:hover {
+      //   margin: 15px 15px 0;
+      // }
     }
   }
 }
